Resized the box for the graphs and descriptive statistics